# Qwen3-Reproduce

./: .gitignore  README.md  check_outputs.ipynb  debug.ipynb  pyproject.toml
debug/: check_outputs.ipynb  tmp.sh
inspect/: dataset_test.py  dataset_test2.py  dummy_mlvu.jsonl  dummy_videomme.jsonl  evaluate_test.py  inspect_video_tokens.py
metadata/: MLVU_MCQ.tsv  Video-MME.tsv
outputs/: check_outputs.ipynb  result_utils.py  summary_fullkv_sinyang36.csv
outputs_old/: check_outputs.ipynb
outputs_old/Qwen3-VL/Qwen3-VL-2B-Instruct/: Qwen3-VL-2B-Instruct_MLVU_tp14000_mf128.jsonl  Qwen3-VL-2B-Instruct_MLVU_tp14000_mf128_score.tsv  Qwen3-VL-2B-Instruct_MLVU_tp1750_mf16.jsonl  Qwen3-VL-2B-Instruct_MLVU_tp1750_mf16_score.tsv  Qwen3-VL-2B-Instruct_MLVU_tp28000_mf256.jsonl  Qwen3-VL-2B-Instruct_MLVU_tp28000_mf256.tsv  Qwen3-VL-2B-Instruct_MLVU_tp28000_mf256_score.xlsx  Qwen3-VL-2B-Instruct_MLVU_tp3500_mf32.jsonl  Qwen3-VL-2B-Instruct_MLVU_tp3500_mf32_score.tsv  Qwen3-VL-2B-Instruct_MLVU_tp56000_mf512.jsonl  Qwen3-VL-2B-Instruct_MLVU_tp56000_mf512.tsv  Qwen3-VL-2B-Instruct_MLVU_tp56000_mf512_score.xlsx  Qwen3-VL-2B-Instruct_MLVU_tp7000_mf64.jsonl  Qwen3-VL-2B-Instruct_MLVU_tp7000_mf64_score.tsv  Qwen3-VL-2B-Instruct_Video-MME_tp14000_mf128.jsonl  Qwen3-VL-2B-Instruct_Video-MME_tp14000_mf128.tsv  (+21 more)
scripts/: run.sh  run_qwen2_5.sh  tmp.sh  tmp0.sh  tmp1.sh  tmp2.sh  tmp3.sh
src/: run_video_qwen25vl.py  run_video_qwen3vl.py  run_video_qwen3vl_simple.py
src/dataset/: longvideobench.py  mlvu.py  video_base.py  videomme.py
src/vlmeval/: __init__.py  tools.py
(+38 files in other folders)
