[project]
name = "qwen3vl-reproduce"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.8.0,<2.9.0",
    "transformers>=4.51.0,<5.0.0",
    "qwen-vl-utils>=0.0.14",
    "portalocker>=3.2.0",
    "tqdm>=4.67.0",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "Pillow>=12.0.0",
    "huggingface-hub<1.0.0",
    "torchvision>=0.23.0,<0.24.0",
    "validators>=0.28.0",
    "sty>=1.0.0",
    "opencv-python>=4.10.0",
    "imageio>=2.36.0",
    "av>=17.0.0",
    "decord>=0.6.0",
    "accelerate>=1.13.0",
    "openpyxl>=3.1.5",
]

[tool.uv]
find-links = ["https://download.pytorch.org/whl/cu128"]
